<resources>
    <string name="app_name">Dirty Clocky</string>

    <!--En-->
    <string name="en_alarm_name">Alarm</string>
    <string name="en_alarm_menu">Alarms</string>
    <string name="en_alarm_description">Description</string>
    <string name="en_alarm_time">Time</string>
    <string name="en_alarm_music">Music</string>
    <string name="en_alarm_hold">Set aside</string>
    <string name="en_alarm_days">Days</string>
    <string name="en_alarm_settings">Advance settings</string>

    <!--Advance settings-->
    <string name="en_alarm_sound">Music</string>
    <string name="en_alarm_repeat">Repeat days</string>
    <string name="en_alarm_increase_volume">Volume increase</string>
    <string name="en_alarm_on_off">Alarm on/off</string>
    <string name="en_alarm_shut_up">Method to stop</string>

    <!--Recording-->
    <string name="en_sound_menu">Recordings</string>
    <string name="en_sound_name">Music</string>

    <!--Menu-->
    <string name="en_alarm_del">Delete</string>
    <string name="en_alarm_save">Save</string>
    <string name="en_alarm_cancel">Cancel</string>
    <string name="en_alarm_ok">Okay</string>
    <string name="en_alarm_done">Done</string>
    <string name="en_alarm_del_tag_message">Delete this record?</string>
    <string name="en_alarm_message_save_changes">Changes was saved</string>
    <string name="en_alarm_message_back_btn">Do you want delete this alarm?</string>
    <string name="en_alarm_message_fill_fields">Please, specify time and name of this alarm</string>

    <!--Dictaphone-->
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <!--Ru-->
    <string name="ru_alarm_name">Будильник</string>
    <string name="ru_alarm_menu">Будильники</string>
    <string name="ru_alarm_description">Описание</string>
    <string name="ru_alarm_time">Время</string>
    <string name="ru_alarm_music">Музыка</string>
    <string name="ru_alarm_hold">Отложить</string>
    <string name="ru_alarm_repeat">Повтор</string>
    <string name="ru_alarm_days">Дни</string>
    <string name="ru_sound_menu">Звукозаписи</string>
    <string name="ru_sound_name">Музыка</string>



    <string name="en_alarm_clock_activity_text_picture">Here could be your advertisement</string>
    <string name="ru_alarm_clock_activity_text_wake_up">Wake up</string>
    <string name="en_alarm_clock_activity_button_off">Off</string>
    <string name="en_alarm_clock_activity_button_set_aside">Set aside</string>
</resources>
